实现除完成按钮以外的自定义键盘输入功能

--- a/Lucuber/Helper/FormulaKeyboard.plist
+++ b/Lucuber/Helper/FormulaKeyboard.plist
@@ -54,7 +54,7 @@
 		</dict>
 		<dict>
 			<key>type</key>
-			<string>Default</string>
+			<string>Number</string>
 			<key>lower</key>
 			<string>2</string>
 			<key>capital</key>
