继续完善NewFormula控制器, 确定此控制器不存在循环引用, 同时完善formula的赋值, 将之前使用的Notification改成闭包. 创建公式输入cell中textField的inputAccessoryView

--- a/Lucuber/Helper/CubeCategory.plist
+++ b/Lucuber/Helper/CubeCategory.plist
@@ -31,7 +31,7 @@
 		<string>Megaminx</string>
 		<string>Square One</string>
 		<string>Pyraminx</string>
-		<string>Rubik&apos;s Clock</string>
+		<string>魔表</string>
 		<string>八阶</string>
 		<string>九阶</string>
 		<string>十阶</string>
