--- a/Lucuber/Info.plist
+++ b/Lucuber/Info.plist
@@ -4,8 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>alarm clock.ttf</string>
-		<string>good times rg.ttf</string>
+		<string>digital-7 (mono).ttf</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
