--- a/Lucuber/Info.plist
+++ b/Lucuber/Info.plist
@@ -33,6 +33,11 @@
 	<array>
 		<string>digital-7 (mono).ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
